recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:1: error: value !=- is not a member of Int
  if (level!=-1){
           ^